--- a/index.html
+++ b/index.html
@@ -3,152 +3,224 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>yourbrand</title>
+<title>GNAW</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
+<!-- Replace with actual Devastation Demo font file if you have it -->
 <style>
-/* ===== BASE ===== */
+@font-face {
+  font-family: 'Devastation';
+  src: local('Devastation Demo');
+}
+
 body {
   margin: 0;
-  background: #0d0d0d;
-  color: #e8e8e8;
-  font-family: 'Inter', sans-serif;
+  background: #0b0b0b;
+  color: #e6e6e6;
+  font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* ===== STITCHED BORDERS ===== */
+/* CROSS STITCH BORDERS */
 .stitch-top,
 .stitch-bottom {
-  height: 12px;
+  height: 14px;
   background: repeating-linear-gradient(
-    90deg,
-    #1a1a1a 0px,
-    #1a1a1a 6px,
-    #e8e8e8 6px,
-    #e8e8e8 8px
+    45deg,
+    #111 0px,
+    #111 8px,
+    #e6e6e6 8px,
+    #e6e6e6 10px
   );
 }
 
 .stitch-bottom {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-/* ===== HEADER ===== */
-header {
-  text-align: center;
-  padding: 30px 20px;
-  font-size: 24px;
-  letter-spacing: 4px;
-  font-weight: 600;
-}
-
-/* ===== PRODUCT FADE SECTION ===== */
-.container {
   position: relative;
-  height: 60vh;
+  margin-top: 60px;
+}
+
+/* HEADER */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 40px;
+}
+
+.logo {
+  font-family: 'Devastation', sans-serif;
+  font-size: 40px;
+  letter-spacing: 6px;
+}
+
+.icons {
+  display: flex;
+  gap: 20px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.icons span:hover {
+  opacity: 0.6;
+}
+
+/* HERO FADE SECTION */
+.hero {
+  position: relative;
+  height: 80vh;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Devastation', sans-serif;
+  font-size: 50px;
+  letter-spacing: 4px;
 }
 
-.product {
-  position: absolute;
-  text-align: center;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-}
+/* Fake “image” backgrounds */
+.slide:nth-child(1) { background: #121212; }
+.slide:nth-child(2) { background: #1a1a1a; }
+.slide:nth-child(3) { background: #151515; }
 
-.product.active {
+.slide.active {
   opacity: 1;
 }
 
-.product h2 {
+/* PRODUCT SECTION */
+.products {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  padding: 60px 20px;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  border: 1px solid #333;
+  padding: 30px;
+  width: 220px;
+  text-align: center;
+  transition: 0.3s ease;
+}
+
+.product-card:hover {
+  border-color: #e6e6e6;
+}
+
+.product-card h3 {
   font-weight: 400;
   letter-spacing: 2px;
 }
 
-.product p {
-  font-size: 14px;
+.product-card p {
   opacity: 0.6;
 }
 
-/* ===== BUTTONS ===== */
-.controls {
-  text-align: center;
-  margin-top: 20px;
+/* FOOTER */
+footer {
+  background: #0e0e0e;
+  padding: 60px 40px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 40px;
 }
 
-button {
-  background: none;
-  border: 1px solid #e8e8e8;
-  color: #e8e8e8;
-  padding: 8px 16px;
-  margin: 5px;
-  cursor: pointer;
-  letter-spacing: 1px;
-  transition: 0.3s ease;
+footer h4 {
+  letter-spacing: 2px;
+  font-weight: 400;
 }
 
-button:hover {
-  background: #e8e8e8;
-  color: #0d0d0d;
+footer p, footer a {
+  font-size: 14px;
+  opacity: 0.7;
+  text-decoration: none;
+  color: #e6e6e6;
+}
+
+footer a:hover {
+  opacity: 1;
 }
 </style>
 </head>
+
 <body>
 
 <div class="stitch-top"></div>
 
 <header>
-YOURBRAND
+  <div class="logo">GNAW</div>
+  <div class="icons">
+    <span>♡</span>
+    <span>🛒</span>
+  </div>
 </header>
 
-<div class="container">
-  <div class="product active">
-    <h2>stitched tee</h2>
-    <p>$48</p>
+<section class="hero">
+  <div class="slide active">DISTORTED TEE</div>
+  <div class="slide">REWORKED HOODIE</div>
+  <div class="slide">SHATTERED SHORTS</div>
+</section>
+
+<section class="products">
+  <div class="product-card">
+    <h3>stitched long sleeve</h3>
+    <p>$68</p>
   </div>
 
-  <div class="product">
-    <h2>distressed hoodie</h2>
-    <p>$82</p>
+  <div class="product-card">
+    <h3>bleached hoodie</h3>
+    <p>$94</p>
   </div>
 
-  <div class="product">
-    <h2>reworked shorts</h2>
-    <p>$56</p>
+  <div class="product-card">
+    <h3>distressed cargos</h3>
+    <p>$110</p>
   </div>
-</div>
+</section>
 
-<div class="controls">
-  <button onclick="prev()">prev</button>
-  <button onclick="next()">next</button>
-</div>
+<footer>
+  <div>
+    <h4>ABOUT</h4>
+    <p>GNAW is a distortion of structure and softness. Handmade pieces rooted in decay and reconstruction.</p>
+  </div>
+
+  <div>
+    <h4>SOCIALS</h4>
+    <p><a href="#">Instagram</a></p>
+    <p><a href="#">TikTok</a></p>
+    <p><a href="#">Pinterest</a></p>
+  </div>
+
+  <div>
+    <h4>CONTACT</h4>
+    <p>Email: contact@gnaw.com</p>
+    <p>Business inquiries welcome.</p>
+  </div>
+</footer>
 
 <div class="stitch-bottom"></div>
 
 <script>
-const products = document.querySelectorAll('.product');
+const slides = document.querySelectorAll('.slide');
 let current = 0;
 
-function show(index) {
-  products.forEach(p => p.classList.remove('active'));
-  products[index].classList.add('active');
+function showSlide(index) {
+  slides.forEach(s => s.classList.remove('active'));
+  slides[index].classList.add('active');
 }
 
-function next() {
-  current = (current + 1) % products.length;
-  show(current);
-}
-
-function prev() {
-  current = (current - 1 + products.length) % products.length;
-  show(current);
-}
+setInterval(() => {
+  current = (current + 1) % slides.length;
+  showSlide(current);
+}, 4000);
 </script>
 
-</body>
-</html>
+</body
