--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ header {
 /* SIDEBAR */
 .sidebar {
   position: fixed;
-  left: -280px; /* fully hidden */
+  left: -280px;
   top: 0;
   width: 260px;
   height: 100%;
@@ -136,14 +136,12 @@ header {
   left: 0;
 }
 
-/* Sidebar close hamburger */
 .sidebar .close {
   font-size: 26px;
   cursor: pointer;
   margin-bottom: 20px;
 }
 
-/* Search */
 .sidebar input {
   width: 100%;
   padding: 8px;
@@ -154,7 +152,6 @@ header {
   box-sizing: border-box;
 }
 
-/* Links */
 .sidebar a {
   display: block;
   padding: 12px 0;
@@ -205,16 +202,73 @@ header {
 
 /* MAIN FOOTER MENU */
 .main-footer {
-  text-align: center;
-  padding: 40px 20px 120px 20px;
+  padding: 40px 20px 120px 40px;
+  text-align: left;
 }
 
-.main-footer a {
+.main-footer a,
+.main-footer .label {
   display: block;
-  margin: 10px 0;
+  margin: 12px 0;
   color: #f2f2f2;
-  text-decoration: none;
+  text-decoration: underline;
   letter-spacing: 2px;
+}
+
+/* Social Icons */
+.social-icons {
+  display: flex;
+  gap: 18px;
+  margin-top: 10px;
+}
+
+.instagram {
+  width: 22px;
+  height: 22px;
+  border: 2px solid #f2f2f2;
+  border-radius: 6px;
+  position: relative;
+}
+
+.instagram::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-radius: 50%;
+  top: 5px;
+  left: 5px;
+}
+
+.instagram::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  background: #f2f2f2;
+  border-radius: 50%;
+  top: 3px;
+  right: 3px;
+}
+
+.tiktok {
+  width: 16px;
+  height: 22px;
+  border-left: 2px solid #f2f2f2;
+  border-bottom: 2px solid #f2f2f2;
+  position: relative;
+}
+
+.tiktok::after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-radius: 50%;
+  bottom: -6px;
+  left: -6px;
 }
 </style>
 </head>
@@ -257,10 +311,14 @@ header {
 
 <div class="main-footer">
   <a href="about.html">About Us</a>
-  <a href="#">Instagram</a>
-  <a href="#">TikTok</a>
   <a href="#">Contact</a>
   <a href="#">FAQ</a>
+
+  <div class="label">Socials</div>
+  <div class="social-icons">
+    <div class="instagram"></div>
+    <div class="tiktok"></div>
+  </div>
 </div>
 
 <div class="stitch-bottom"></div>
