--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ header {
   letter-spacing: 2px;
 }
 
-/* Social Icons */
+/* Instagram Outline */
 .social-icons {
   display: flex;
   gap: 18px;
@@ -250,9 +250,6 @@ header {
   border-radius: 50%;
   top: 3px;
   right: 3px;
-}
-
-
 }
 </style>
 </head>
@@ -298,9 +295,10 @@ header {
   <a href="#">Contact</a>
   <a href="#">FAQ</a>
 
-<div class="social-icons">
-  <div class="instagram"></div>
-
+  <div class="label">Socials</div>
+  <div class="social-icons">
+    <div class="instagram"></div>
+  </div>
 </div>
 
 <div class="stitch-bottom"></div>
