--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GNAW</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
-
 <style>
 body {
   margin: 0;
-  background: #0a0a0a;
+  background: #000000;
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* TOP + BOTTOM STITCH */
+/* STITCH BARS */
 .stitch-top,
 .stitch-bottom {
   height: 14px;
@@ -37,30 +35,130 @@ body {
 
 /* HEADER */
 header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
   padding: 20px 30px;
-  position: relative;
 }
 
-/* LOGO IMAGE */
-.logo img {
-  height: 50px;   /* adjust size here if needed */
-  width: auto;
-  display: block;
-}
-
-.icons {
-  display: flex;
-  gap: 20px;
-  align-items: center;
+/* LEFT */
+.left {
+  justify-self: start;
 }
 
 .hamburger {
   font-size: 26px;
   cursor: pointer;
 }
+
+/* SMALL HEADER LOGO */
+.logo-small {
+  justify-self: center;
+}
+
+.logo-small img {
+  height: 60px;
+  width: auto;
+}
+
+/* RIGHT */
+.icons {
+  justify-self: end;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.heart {
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.bag {
+  width: 22px;
+  height: 22px;
+  border: 2px solid #f2f2f2;
+  border-radius: 3px;
+  position: relative;
+  cursor: pointer;
+}
+
+.bag::before {
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-bottom: none;
+  border-radius: 8px 8px 0 0;
+  top: -8px;
+  left: 3px;
+}
+
+/* HERO SECTION */
+.hero {
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+/* LARGE CENTER LOGO */
+.logo-hero img {
+  height: 420px;
+  width: auto;
+  animation: float 6s ease-in-out infinite;
+}
+
+/* Subtle floating animation */
+@keyframes float {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-12px); }
+  100% { transform: translateY(0px); }
+}
+
+/* FADE IN */
+.logo-hero {
+  opacity: 0;
+  animation: fadeIn 2s ease forwards;
+}
+
+@keyframes fadeIn {
+  to { opacity: 1; }
+}
+</style>
+</head>
+
+<body>
+
+<div class="stitch-top"></div>
+
+<header>
+  <div class="left">
+    <div class="hamburger">☰</div>
+  </div>
+
+  <div class="logo-small">
+    <img src="unnamed.png" alt="GNAW Logo">
+  </div>
+
+  <div class="icons">
+    <div class="heart">♡</div>
+    <div class="bag"></div>
+  </div>
+</header>
+
+<section class="hero">
+  <div class="logo-hero">
+    <img src="unnamed.png" alt="GNAW Logo Large">
+  </div>
+</section>
+
+<div class="stitch-bottom"></div>
+
+</body>
+</html>}
 
 .heart {
   font-size: 22px;
