--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <style>
 body {
   margin: 0;
-  background: #000000;
+  background: #000000; /* matches your logo background */
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* STITCH BARS */
+/* TOP + BOTTOM STITCH */
 .stitch-top,
 .stitch-bottom {
   height: 14px;
@@ -35,130 +35,31 @@ body {
 
 /* HEADER */
 header {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
+  position: relative;
 }
 
-/* LEFT */
-.left {
-  justify-self: start;
+/* LOGO IMAGE */
+.logo img {
+  height: 90px; /* bigger */
+  width: auto;
+  display: block;
+}
+
+/* ICONS */
+.icons {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .hamburger {
   font-size: 26px;
   cursor: pointer;
 }
-
-/* SMALL HEADER LOGO */
-.logo-small {
-  justify-self: center;
-}
-
-.logo-small img {
-  height: 60px;
-  width: auto;
-}
-
-/* RIGHT */
-.icons {
-  justify-self: end;
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
-
-.heart {
-  font-size: 22px;
-  cursor: pointer;
-}
-
-.bag {
-  width: 22px;
-  height: 22px;
-  border: 2px solid #f2f2f2;
-  border-radius: 3px;
-  position: relative;
-  cursor: pointer;
-}
-
-.bag::before {
-  content: '';
-  position: absolute;
-  width: 12px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-bottom: none;
-  border-radius: 8px 8px 0 0;
-  top: -8px;
-  left: 3px;
-}
-
-/* HERO SECTION */
-.hero {
-  height: 75vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-/* LARGE CENTER LOGO */
-.logo-hero img {
-  height: 420px;
-  width: auto;
-  animation: float 6s ease-in-out infinite;
-}
-
-/* Subtle floating animation */
-@keyframes float {
-  0% { transform: translateY(0px); }
-  50% { transform: translateY(-12px); }
-  100% { transform: translateY(0px); }
-}
-
-/* FADE IN */
-.logo-hero {
-  opacity: 0;
-  animation: fadeIn 2s ease forwards;
-}
-
-@keyframes fadeIn {
-  to { opacity: 1; }
-}
-</style>
-</head>
-
-<body>
-
-<div class="stitch-top"></div>
-
-<header>
-  <div class="left">
-    <div class="hamburger">☰</div>
-  </div>
-
-  <div class="logo-small">
-    <img src="unnamed.png" alt="GNAW Logo">
-  </div>
-
-  <div class="icons">
-    <div class="heart">♡</div>
-    <div class="bag"></div>
-  </div>
-</header>
-
-<section class="hero">
-  <div class="logo-hero">
-    <img src="unnamed.png" alt="GNAW Logo Large">
-  </div>
-</section>
-
-<div class="stitch-bottom"></div>
-
-</body>
-</html>}
 
 .heart {
   font-size: 22px;
@@ -214,7 +115,6 @@ header {
   overflow: hidden;
 }
 
-/* Vertical stitching */
 .sidebar::after {
   content: "";
   position: absolute;
@@ -245,7 +145,7 @@ header {
   width: 100%;
   padding: 8px;
   margin-bottom: 30px;
-  background: #0a0a0a;
+  background: #000000;
   border: 1px solid #333;
   color: #f2f2f2;
   box-sizing: border-box;
@@ -263,7 +163,7 @@ header {
 /* STATIC HERO */
 .static-hero {
   height: 70vh;
-  background: #141414;
+  background: #0d0d0d;
 }
 
 /* COUNTER */
@@ -287,19 +187,19 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #1a1a1a;
+  background: #111111;
   opacity: 0;
   transition: opacity 1.5s ease-in-out;
 }
 
-.slide:nth-child(2) { background: #151515; }
-.slide:nth-child(3) { background: #181818; }
+.slide:nth-child(2) { background: #141414; }
+.slide:nth-child(3) { background: #171717; }
 
 .slide.active {
   opacity: 1;
 }
 
-/* MAIN FOOTER MENU */
+/* FOOTER */
 .main-footer {
   padding: 40px 20px 120px 40px;
   text-align: left;
@@ -314,7 +214,6 @@ header {
   letter-spacing: 2px;
 }
 
-/* Instagram Outline */
 .social-icons {
   display: flex;
   gap: 18px;
