--- a/index.html
+++ b/index.html
@@ -8,23 +8,44 @@
 <style>
 body {
   margin: 0;
-  background: #000000; /* matches your logo background */
+  background: #050505; /* matched to logo black */
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* TOP + BOTTOM STITCH */
+/* NEW STITCH STYLE  |-|-|-|-  */
 .stitch-top,
 .stitch-bottom {
-  height: 14px;
+  height: 20px;
+  position: relative;
+  background: #050505;
+}
+
+.stitch-top::before,
+.stitch-bottom::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #f2f2f2; /* horizontal line */
+  transform: translateY(-50%);
+}
+
+.stitch-top::after,
+.stitch-bottom::after {
+  content: "";
+  position: absolute;
+  inset: 0;
   background: repeating-linear-gradient(
     90deg,
-    #f2f2f2 0px,
-    #f2f2f2 2px,
-    transparent 2px,
-    transparent 8px
-  );
+    transparent 0px,
+    transparent 14px,
+    #f2f2f2 14px,
+    #f2f2f2 16px
+  ); /* vertical bars */
 }
 
 .stitch-bottom {
@@ -39,12 +60,11 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
-  position: relative;
 }
 
-/* LOGO IMAGE */
+/* LOGO */
 .logo img {
-  height: 90px; /* bigger */
+  height: 90px;
   width: auto;
   display: block;
 }
@@ -61,6 +81,211 @@ header {
   cursor: pointer;
 }
 
+.heart {
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.bag {
+  width: 22px;
+  height: 22px;
+  border: 2px solid #f2f2f2;
+  border-radius: 3px;
+  position: relative;
+  cursor: pointer;
+}
+
+.bag::before {
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-bottom: none;
+  border-radius: 8px 8px 0 0;
+  top: -8px;
+  left: 3px;
+}
+
+/* SIDEBAR */
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  display: none;
+  z-index: 90;
+}
+
+.overlay.active {
+  display: block;
+}
+
+.sidebar {
+  position: fixed;
+  left: -280px;
+  top: 0;
+  width: 260px;
+  height: 100%;
+  background: #0d0d0d;
+  padding: 30px 20px;
+  transition: left 0.4s ease;
+  z-index: 100;
+}
+
+.sidebar.active {
+  left: 0;
+}
+
+.sidebar .close {
+  font-size: 26px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.sidebar input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 30px;
+  background: #050505;
+  border: 1px solid #333;
+  color: #f2f2f2;
+}
+
+.sidebar a {
+  display: block;
+  padding: 12px 0;
+  text-decoration: none;
+  color: #f2f2f2;
+  letter-spacing: 2px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+/* STATIC HERO */
+.static-hero {
+  height: 70vh;
+}
+
+/* COUNTER */
+.counter {
+  text-align: center;
+  padding: 20px;
+  letter-spacing: 2px;
+}
+
+/* SLIDES */
+.hero {
+  position: relative;
+  height: 50vh;
+  width: 80%;
+  margin: 40px auto 120px auto;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+/* FOOTER */
+.main-footer {
+  padding: 40px 20px 120px 40px;
+}
+
+.main-footer a,
+.main-footer .label {
+  display: block;
+  margin: 12px 0;
+  color: #f2f2f2;
+  text-decoration: underline;
+  letter-spacing: 2px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="stitch-top"></div>
+
+<header>
+  <div class="hamburger" onclick="openMenu()">☰</div>
+
+  <div class="logo">
+    <img src="unnamed.png" alt="GNAW Logo">
+  </div>
+
+  <div class="icons">
+    <div class="heart">♡</div>
+    <div class="bag"></div>
+  </div>
+</header>
+
+<div class="overlay" id="overlay" onclick="closeMenu()"></div>
+
+<div class="sidebar" id="sidebar">
+  <div class="close" onclick="closeMenu()">☰</div>
+  <input type="text" placeholder="Search...">
+  <a href="#">Skirts</a>
+  <a href="#">Shorts</a>
+  <a href="#">Tops</a>
+  <a href="#">Accessories</a>
+</div>
+
+<section class="static-hero"></section>
+
+<div class="counter">
+  <span id="count">247</span> pieces saved from landfills
+</div>
+
+<section class="hero">
+  <div class="slide active"></div>
+  <div class="slide"></div>
+  <div class="slide"></div>
+</section>
+
+<div class="main-footer">
+  <a href="about.html">About Us</a>
+  <a href="#">Contact</a>
+  <a href="#">FAQ</a>
+</div>
+
+<div class="stitch-bottom"></div>
+
+<script>
+function openMenu() {
+  document.getElementById("sidebar").classList.add("active");
+  document.getElementById("overlay").classList.add("active");
+}
+
+function closeMenu() {
+  document.getElementById("sidebar").classList.remove("active");
+  document.getElementById("overlay").classList.remove("active");
+}
+
+const slides = document.querySelectorAll(".slide");
+let current = 0;
+
+setInterval(() => {
+  slides[current].classList.remove("active");
+  current = (current + 1) % slides.length;
+  slides[current].classList.add("active");
+}, 4000);
+
+let count = 247;
+setInterval(() => {
+  count++;
+  document.getElementById("count").textContent = count;
+}, 3000);
+</script>
+
+</body>
+</html>
 .heart {
   font-size: 22px;
   cursor: pointer;
