--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
 <title>GNAW</title>
 
 <style>
-body {
+html, body {
   margin: 0;
-  background: #050505; /* matched to logo black */
+  padding: 0;
+  background: #0a0a0a; /* deep neutral black */
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* NEW STITCH STYLE  |-|-|-|-  */
+/* ================= STITCH STYLE ================= */
+/* Pattern: |-|-|-|- */
+
 .stitch-top,
 .stitch-bottom {
-  height: 20px;
+  height: 22px;
   position: relative;
-  background: #050505;
+  background: #0a0a0a;
 }
 
 .stitch-top::before,
@@ -30,7 +33,7 @@ body {
   left: 0;
   width: 100%;
   height: 2px;
-  background: #f2f2f2; /* horizontal line */
+  background: #f2f2f2;
   transform: translateY(-50%);
 }
 
@@ -42,10 +45,10 @@ body {
   background: repeating-linear-gradient(
     90deg,
     transparent 0px,
-    transparent 14px,
-    #f2f2f2 14px,
-    #f2f2f2 16px
-  ); /* vertical bars */
+    transparent 18px,
+    #f2f2f2 18px,
+    #f2f2f2 20px
+  );
 }
 
 .stitch-bottom {
@@ -54,7 +57,8 @@ body {
   width: 100%;
 }
 
-/* HEADER */
+/* ================= HEADER ================= */
+
 header {
   display: flex;
   justify-content: space-between;
@@ -62,23 +66,21 @@ header {
   padding: 20px 30px;
 }
 
-/* LOGO */
+.hamburger {
+  font-size: 26px;
+  cursor: pointer;
+}
+
 .logo img {
-  height: 90px;
+  height: 95px;
   width: auto;
   display: block;
 }
 
-/* ICONS */
 .icons {
   display: flex;
   gap: 20px;
   align-items: center;
-}
-
-.hamburger {
-  font-size: 26px;
-  cursor: pointer;
 }
 
 .heart {
@@ -95,6 +97,250 @@ header {
   cursor: pointer;
 }
 
+.bag::before {
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-bottom: none;
+  border-radius: 8px 8px 0 0;
+  top: -8px;
+  left: 3px;
+}
+
+/* ================= SIDEBAR ================= */
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  display: none;
+  z-index: 90;
+}
+
+.overlay.active {
+  display: block;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -260px; /* fully hidden */
+  width: 260px;
+  height: 100%;
+  background: #111111;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  transition: left 0.4s ease;
+  z-index: 100;
+}
+
+.sidebar.active {
+  left: 0;
+}
+
+.sidebar .close {
+  font-size: 26px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.sidebar input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 30px;
+  background: #0a0a0a;
+  border: 1px solid #333;
+  color: #f2f2f2;
+}
+
+.sidebar a {
+  display: block;
+  padding: 12px 0;
+  text-decoration: none;
+  color: #f2f2f2;
+  letter-spacing: 2px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+/* ================= STATIC HERO BOX ================= */
+
+.static-hero {
+  height: 70vh;
+  background: #121212;
+}
+
+/* ================= COUNTER ================= */
+
+.counter {
+  text-align: center;
+  padding: 20px;
+  font-size: 16px;
+  letter-spacing: 2px;
+}
+
+/* ================= SLIDES ================= */
+
+.hero {
+  position: relative;
+  height: 50vh;
+  width: 80%;
+  margin: 40px auto 120px auto;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #181818;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.slide:nth-child(2) { background: #141414; }
+.slide:nth-child(3) { background: #1c1c1c; }
+
+.slide.active {
+  opacity: 1;
+}
+
+/* ================= FOOTER ================= */
+
+.main-footer {
+  padding: 40px 20px 120px 40px;
+}
+
+.main-footer a,
+.main-footer .label {
+  display: block;
+  margin: 12px 0;
+  color: #f2f2f2;
+  text-decoration: underline;
+  letter-spacing: 2px;
+}
+
+.social-icons {
+  display: flex;
+  gap: 18px;
+  margin-top: 10px;
+}
+
+.instagram {
+  width: 22px;
+  height: 22px;
+  border: 2px solid #f2f2f2;
+  border-radius: 6px;
+  position: relative;
+}
+
+.instagram::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-radius: 50%;
+  top: 5px;
+  left: 5px;
+}
+
+.instagram::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  background: #f2f2f2;
+  border-radius: 50%;
+  top: 3px;
+  right: 3px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="stitch-top"></div>
+
+<header>
+  <div class="hamburger" onclick="openMenu()">☰</div>
+
+  <div class="logo">
+    <img src="unnamed.png" alt="GNAW Logo">
+  </div>
+
+  <div class="icons">
+    <div class="heart">♡</div>
+    <div class="bag"></div>
+  </div>
+</header>
+
+<div class="overlay" id="overlay" onclick="closeMenu()"></div>
+
+<div class="sidebar" id="sidebar">
+  <div class="close" onclick="closeMenu()">☰</div>
+  <input type="text" placeholder="Search...">
+  <a href="#">Skirts</a>
+  <a href="#">Shorts</a>
+  <a href="#">Tops</a>
+  <a href="#">Accessories</a>
+</div>
+
+<section class="static-hero"></section>
+
+<div class="counter">
+  <span id="count">247</span> pieces saved from landfills
+</div>
+
+<section class="hero">
+  <div class="slide active"></div>
+  <div class="slide"></div>
+  <div class="slide"></div>
+</section>
+
+<div class="main-footer">
+  <a href="about.html">About Us</a>
+  <a href="#">Contact</a>
+  <a href="#">FAQ</a>
+
+  <div class="label">Socials</div>
+  <div class="social-icons">
+    <div class="instagram"></div>
+  </div>
+</div>
+
+<div class="stitch-bottom"></div>
+
+<script>
+function openMenu() {
+  document.getElementById("sidebar").classList.add("active");
+  document.getElementById("overlay").classList.add("active");
+}
+
+function closeMenu() {
+  document.getElementById("sidebar").classList.remove("active");
+  document.getElementById("overlay").classList.remove("active");
+}
+
+const slides = document.querySelectorAll(".slide");
+let current = 0;
+
+setInterval(() => {
+  slides[current].classList.remove("active");
+  current = (current + 1) % slides.length;
+  slides[current].classList.add("active");
+}, 4000);
+
+let count = 247;
+setInterval(() => {
+  count++;
+  document.getElementById("count").textContent = count;
+}, 3000);
+</script>
+
+</body>
+</html>
 .bag::before {
   content: '';
   position: absolute;
