--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 <title>GNAW</title>
 
 <style>
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0;
   padding: 0;
-  background: #0a0a0a; /* deep neutral black */
+  background: #0a0a0a;
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* ================= STITCH STYLE ================= */
-/* Pattern: |-|-|-|- */
+/* ================= STITCH LINES ================= */
 
 .stitch-top,
 .stitch-bottom {
@@ -30,7 +33,6 @@ html, body {
   content: "";
   position: absolute;
   top: 50%;
-  left: 0;
   width: 100%;
   height: 2px;
   background: #f2f2f2;
@@ -73,14 +75,12 @@ header {
 
 .logo img {
   height: 95px;
-  width: auto;
   display: block;
 }
 
 .icons {
   display: flex;
   gap: 20px;
-  align-items: center;
 }
 
 .heart {
@@ -94,7 +94,6 @@ header {
   border: 2px solid #f2f2f2;
   border-radius: 3px;
   position: relative;
-  cursor: pointer;
 }
 
 .bag::before {
@@ -115,29 +114,32 @@ header {
   position: fixed;
   inset: 0;
   background: rgba(0,0,0,0.4);
-  display: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s ease;
   z-index: 90;
 }
 
 .overlay.active {
-  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 
 .sidebar {
   position: fixed;
   top: 0;
-  left: -260px; /* fully hidden */
+  left: 0;
+  transform: translateX(-100%);
   width: 260px;
   height: 100%;
   background: #111111;
   padding: 30px 20px;
-  box-sizing: border-box;
-  transition: left 0.4s ease;
+  transition: transform 0.4s ease;
   z-index: 100;
 }
 
 .sidebar.active {
-  left: 0;
+  transform: translateX(0);
 }
 
 .sidebar .close {
@@ -164,7 +166,7 @@ header {
   border-bottom: 1px solid #f2f2f2;
 }
 
-/* ================= STATIC HERO BOX ================= */
+/* ================= HERO BOX ================= */
 
 .static-hero {
   height: 70vh;
@@ -176,7 +178,6 @@ header {
 .counter {
   text-align: center;
   padding: 20px;
-  font-size: 16px;
   letter-spacing: 2px;
 }
 
@@ -192,11 +193,10 @@ header {
 
 .slide {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #181818;
+  inset: 0;
   opacity: 0;
-  transition: opacity 1.5s ease-in-out;
+  transition: opacity 1.5s ease;
+  background: #181818;
 }
 
 .slide:nth-child(2) { background: #141414; }
@@ -279,7 +279,7 @@ header {
 <div class="overlay" id="overlay" onclick="closeMenu()"></div>
 
 <div class="sidebar" id="sidebar">
-  <div class="close" onclick="closeMenu()">☰</div>
+  <div class="close" onclick="closeMenu()">✕</div>
   <input type="text" placeholder="Search...">
   <a href="#">Skirts</a>
   <a href="#">Shorts</a>
@@ -313,478 +313,17 @@ header {
 <div class="stitch-bottom"></div>
 
 <script>
+const sidebar = document.getElementById("sidebar");
+const overlay = document.getElementById("overlay");
+
 function openMenu() {
-  document.getElementById("sidebar").classList.add("active");
-  document.getElementById("overlay").classList.add("active");
+  sidebar.classList.add("active");
+  overlay.classList.add("active");
 }
 
 function closeMenu() {
-  document.getElementById("sidebar").classList.remove("active");
-  document.getElementById("overlay").classList.remove("active");
-}
-
-const slides = document.querySelectorAll(".slide");
-let current = 0;
-
-setInterval(() => {
-  slides[current].classList.remove("active");
-  current = (current + 1) % slides.length;
-  slides[current].classList.add("active");
-}, 4000);
-
-let count = 247;
-setInterval(() => {
-  count++;
-  document.getElementById("count").textContent = count;
-}, 3000);
-</script>
-
-</body>
-</html>
-.bag::before {
-  content: '';
-  position: absolute;
-  width: 12px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-bottom: none;
-  border-radius: 8px 8px 0 0;
-  top: -8px;
-  left: 3px;
-}
-
-/* SIDEBAR */
-.overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.4);
-  display: none;
-  z-index: 90;
-}
-
-.overlay.active {
-  display: block;
-}
-
-.sidebar {
-  position: fixed;
-  left: -280px;
-  top: 0;
-  width: 260px;
-  height: 100%;
-  background: #0d0d0d;
-  padding: 30px 20px;
-  transition: left 0.4s ease;
-  z-index: 100;
-}
-
-.sidebar.active {
-  left: 0;
-}
-
-.sidebar .close {
-  font-size: 26px;
-  cursor: pointer;
-  margin-bottom: 20px;
-}
-
-.sidebar input {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 30px;
-  background: #050505;
-  border: 1px solid #333;
-  color: #f2f2f2;
-}
-
-.sidebar a {
-  display: block;
-  padding: 12px 0;
-  text-decoration: none;
-  color: #f2f2f2;
-  letter-spacing: 2px;
-  border-bottom: 1px solid #f2f2f2;
-}
-
-/* STATIC HERO */
-.static-hero {
-  height: 70vh;
-}
-
-/* COUNTER */
-.counter {
-  text-align: center;
-  padding: 20px;
-  letter-spacing: 2px;
-}
-
-/* SLIDES */
-.hero {
-  position: relative;
-  height: 50vh;
-  width: 80%;
-  margin: 40px auto 120px auto;
-}
-
-.slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #111;
-  opacity: 0;
-  transition: opacity 1.5s ease-in-out;
-}
-
-.slide.active {
-  opacity: 1;
-}
-
-/* FOOTER */
-.main-footer {
-  padding: 40px 20px 120px 40px;
-}
-
-.main-footer a,
-.main-footer .label {
-  display: block;
-  margin: 12px 0;
-  color: #f2f2f2;
-  text-decoration: underline;
-  letter-spacing: 2px;
-}
-</style>
-</head>
-
-<body>
-
-<div class="stitch-top"></div>
-
-<header>
-  <div class="hamburger" onclick="openMenu()">☰</div>
-
-  <div class="logo">
-    <img src="unnamed.png" alt="GNAW Logo">
-  </div>
-
-  <div class="icons">
-    <div class="heart">♡</div>
-    <div class="bag"></div>
-  </div>
-</header>
-
-<div class="overlay" id="overlay" onclick="closeMenu()"></div>
-
-<div class="sidebar" id="sidebar">
-  <div class="close" onclick="closeMenu()">☰</div>
-  <input type="text" placeholder="Search...">
-  <a href="#">Skirts</a>
-  <a href="#">Shorts</a>
-  <a href="#">Tops</a>
-  <a href="#">Accessories</a>
-</div>
-
-<section class="static-hero"></section>
-
-<div class="counter">
-  <span id="count">247</span> pieces saved from landfills
-</div>
-
-<section class="hero">
-  <div class="slide active"></div>
-  <div class="slide"></div>
-  <div class="slide"></div>
-</section>
-
-<div class="main-footer">
-  <a href="about.html">About Us</a>
-  <a href="#">Contact</a>
-  <a href="#">FAQ</a>
-</div>
-
-<div class="stitch-bottom"></div>
-
-<script>
-function openMenu() {
-  document.getElementById("sidebar").classList.add("active");
-  document.getElementById("overlay").classList.add("active");
-}
-
-function closeMenu() {
-  document.getElementById("sidebar").classList.remove("active");
-  document.getElementById("overlay").classList.remove("active");
-}
-
-const slides = document.querySelectorAll(".slide");
-let current = 0;
-
-setInterval(() => {
-  slides[current].classList.remove("active");
-  current = (current + 1) % slides.length;
-  slides[current].classList.add("active");
-}, 4000);
-
-let count = 247;
-setInterval(() => {
-  count++;
-  document.getElementById("count").textContent = count;
-}, 3000);
-</script>
-
-</body>
-</html>
-.heart {
-  font-size: 22px;
-  cursor: pointer;
-}
-
-.bag {
-  width: 22px;
-  height: 22px;
-  border: 2px solid #f2f2f2;
-  border-radius: 3px;
-  position: relative;
-  cursor: pointer;
-}
-
-.bag::before {
-  content: '';
-  position: absolute;
-  width: 12px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-bottom: none;
-  border-radius: 8px 8px 0 0;
-  top: -8px;
-  left: 3px;
-}
-
-/* OVERLAY */
-.overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.4);
-  display: none;
-  z-index: 90;
-}
-
-.overlay.active {
-  display: block;
-}
-
-/* SIDEBAR */
-.sidebar {
-  position: fixed;
-  left: -280px;
-  top: 0;
-  width: 260px;
-  height: 100%;
-  background: #111;
-  padding: 30px 20px;
-  transition: left 0.4s ease;
-  z-index: 100;
-  box-sizing: border-box;
-  overflow: hidden;
-}
-
-.sidebar::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 14px;
-  height: 100%;
-  background: repeating-linear-gradient(
-    180deg,
-    #f2f2f2 0px,
-    #f2f2f2 2px,
-    transparent 2px,
-    transparent 8px
-  );
-}
-
-.sidebar.active {
-  left: 0;
-}
-
-.sidebar .close {
-  font-size: 26px;
-  cursor: pointer;
-  margin-bottom: 20px;
-}
-
-.sidebar input {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 30px;
-  background: #000000;
-  border: 1px solid #333;
-  color: #f2f2f2;
-  box-sizing: border-box;
-}
-
-.sidebar a {
-  display: block;
-  padding: 12px 0;
-  text-decoration: none;
-  color: #f2f2f2;
-  letter-spacing: 2px;
-  border-bottom: 1px solid #f2f2f2;
-}
-
-/* STATIC HERO */
-.static-hero {
-  height: 70vh;
-  background: #0d0d0d;
-}
-
-/* COUNTER */
-.counter {
-  text-align: center;
-  padding: 20px;
-  font-size: 16px;
-  letter-spacing: 2px;
-}
-
-/* FADE SECTION */
-.hero {
-  position: relative;
-  height: 50vh;
-  width: 80%;
-  margin: 40px auto 120px auto;
-  overflow: hidden;
-}
-
-.slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #111111;
-  opacity: 0;
-  transition: opacity 1.5s ease-in-out;
-}
-
-.slide:nth-child(2) { background: #141414; }
-.slide:nth-child(3) { background: #171717; }
-
-.slide.active {
-  opacity: 1;
-}
-
-/* FOOTER */
-.main-footer {
-  padding: 40px 20px 120px 40px;
-  text-align: left;
-}
-
-.main-footer a,
-.main-footer .label {
-  display: block;
-  margin: 12px 0;
-  color: #f2f2f2;
-  text-decoration: underline;
-  letter-spacing: 2px;
-}
-
-.social-icons {
-  display: flex;
-  gap: 18px;
-  margin-top: 10px;
-}
-
-.instagram {
-  width: 22px;
-  height: 22px;
-  border: 2px solid #f2f2f2;
-  border-radius: 6px;
-  position: relative;
-}
-
-.instagram::before {
-  content: "";
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-radius: 50%;
-  top: 5px;
-  left: 5px;
-}
-
-.instagram::after {
-  content: "";
-  position: absolute;
-  width: 3px;
-  height: 3px;
-  background: #f2f2f2;
-  border-radius: 50%;
-  top: 3px;
-  right: 3px;
-}
-</style>
-</head>
-
-<body>
-
-<div class="stitch-top"></div>
-
-<header>
-  <div class="hamburger" onclick="openMenu()">☰</div>
-
-  <div class="logo">
-    <img src="unnamed.png" alt="GNAW Logo">
-  </div>
-
-  <div class="icons">
-    <div class="heart">♡</div>
-    <div class="bag"></div>
-  </div>
-</header>
-
-<div class="overlay" id="overlay" onclick="closeMenu()"></div>
-
-<div class="sidebar" id="sidebar">
-  <div class="close" onclick="closeMenu()">☰</div>
-  <input type="text" placeholder="Search...">
-  <a href="#">Skirts</a>
-  <a href="#">Shorts</a>
-  <a href="#">Tops</a>
-  <a href="#">Accessories</a>
-</div>
-
-<section class="static-hero"></section>
-
-<div class="counter">
-  <span id="count">247</span> pieces saved from landfills
-</div>
-
-<section class="hero">
-  <div class="slide active"></div>
-  <div class="slide"></div>
-  <div class="slide"></div>
-</section>
-
-<div class="main-footer">
-  <a href="about.html">About Us</a>
-  <a href="#">Contact</a>
-  <a href="#">FAQ</a>
-
-  <div class="label">Socials</div>
-  <div class="social-icons">
-    <div class="instagram"></div>
-  </div>
-</div>
-
-<div class="stitch-bottom"></div>
-
-<script>
-function openMenu() {
-  document.getElementById("sidebar").classList.add("active");
-  document.getElementById("overlay").classList.add("active");
-}
-
-function closeMenu() {
-  document.getElementById("sidebar").classList.remove("active");
-  document.getElementById("overlay").classList.remove("active");
+  sidebar.classList.remove("active");
+  overlay.classList.remove("active");
 }
 
 const slides = document.querySelectorAll(".slide");
